corrected size of all airbug logos and images, updated style elements on text, updated marketing content with most recent version of text. Removed signup page button on sign up page. Updated styling and spacing on website including break points and max-width of text boxes

--- a/projects/splash/static/css/style.css
+++ b/projects/splash/static/css/style.css
@@ -1,3 +1,4 @@
+
 html {
     height: 100%;
 }
@@ -5,7 +6,7 @@ html {
 body {
     height: 100%;
     padding-bottom: 0px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;\
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 
 }
 
@@ -13,12 +14,38 @@ a {
     color: #00B7FF;
 }
 
-.btn {
-    margin-right: 10px;
-}
-
 p {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.social-feed-container{
+    float: left;
+    width: 135px;
+    margin-top: 10px;
+}
+
+.social-text{
+    margin-top: 22px;
+}
+
+.btn{
+    margin-right: 10px;
+}
+.button-font {
+    font-size: 1.25em;
+}
+.airbug-image {
+    max-width: 100%;
+    height: auto;
+}
+
+.about-description {
+    max-width: 850px;
+    padding-left: 15px;
+    margin-bottom: 30px;
+    text-align: left;
+    font-size: 1.250em;
+    font-weight: 300;
 }
 
 /* Stay in flow
@@ -61,14 +88,33 @@ p {
 
 .header-tagline {
   text-align: center;
+  margin-top: 35px;
+  margin-bottom: 30px;
 }
 
+.airbug-screenshot{
+    margin-top: 35px;
+}
 .row3{
     background-color:   #abcecb;
 }
 
 .row5{
     background-color:   #abcecb;
+}
+
+
+
+/* Features
+********************************************/
+.feature-container{
+    max-width: 258px;
+    margin: 0 auto;
+}
+
+.benefit-container{
+    max-width: 834px;
+    margin: 0 auto;
 }
 
 .benefit-title {
@@ -93,21 +139,23 @@ p {
     line-height: 1.1px;
     color: rgb(42,42,42);
     padding-left: 15px;
-    text-align:center;
+    text-align:left;
 }
 
 .feature-description{
     font-size: .875em;
     color: rgb(90,90,90);
     padding-left: 15px;
-    text-align: center;
+    text-align: left;
 }
 
 /* Footer
 ********************************************/
 
 .footer{
-  height: 200px;
+  height: 275px;
+  margin-top: 40px;
+  margin-bottom: 30px;
 }
 
 #app-container {
@@ -514,7 +562,7 @@ p {
     position: absolute;
     width: 576px;
     height: 415px;
-    top: 50px;
+    top: 100px;
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
     border-left: solid 1px #CCCCCC;
@@ -556,6 +604,10 @@ p {
     width: 502px;
 }
 
+.feedback-label {
+    margin-top: 5px;
+}
+
 .feedback-edge-container {
     display: block;
     position: absolute;
@@ -579,6 +631,8 @@ p {
     position: absolute;
     left: 0;
     top: 0;
+    max-width:100%;
+    height: auto;
 }
 
 .feedback-airbug-hide {
@@ -698,8 +752,8 @@ p {
 
 #feedback-tab {
     display: block;
-    width: 18px;
-    height: 128px;
+    width: 40px;
+    height: 140px;
     padding: 10px;
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
@@ -796,22 +850,21 @@ p {
 /* Explainer Page
 ********************************************/
 
-.logo-container {
+/*.logo-container {
     position: relative;
     margin-top: 130px;
     margin-left: auto;
     margin-right: auto;
     width: 250px;
     height: 110px;
-}
+}*/
 
-.logo {
+#logo {
     display: block;
     position: absolute;
-    width: 232px;
-    height: 105px;
-    top: 0px;
-    left: 35px;
+    width: 200px;
+    height: 80px;
+    padding: 0px;
 }
 
 .marketing-container {
@@ -873,7 +926,7 @@ p {
 }
 
 .feature-example {
-    width: 350px;
+    width: 258px;
     height: 220px;
     margin-left: auto;
     margin-right: auto;
